--- a/SoberDinner.Infrastructure/SoberDinner.Infrastructure.csproj
+++ b/SoberDinner.Infrastructure/SoberDinner.Infrastructure.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SoberDinner.Application\SoberDinner.Application.csproj" />
   </ItemGroup>
 
