--- a/SoberDinner.Api/SoberDinner.Api.csproj
+++ b/SoberDinner.Api/SoberDinner.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>5ee87b7b-8367-42ac-8f70-66281ccdb709</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
