--- a/SoberDinner.Api/appsettings.Development.json
+++ b/SoberDinner.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "JwtSettings": {
-    "Secret": "a-secure-secret-key-with-at-least-32-characters",
+    "Secret": "",
     "ExpiryMinutes": 60,
     "Issuer": "Sober",
     "Audience": "Sober"
